deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: https://github.com/avmgithub/s2i-pyflask-demo.git
    deployment.kubernetes.io/revision: "2"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"pydemo-build:latest","namespace":"pydemo"},"fieldPath":"spec.template.spec.containers[?(@.name==\"pydemo-build\")].image","pause":"false"}]'
  labels:
    app: pydemo-build
    app.kubernetes.io/component: pydemo-build
    app.kubernetes.io/instance: pydemo-build
    app.kubernetes.io/name: pydemo-build
    app.kubernetes.io/part-of: pydemo-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.9-ubi8
  name: pydemo-build
  namespace: pydemo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pydemo-build
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pydemo-build
        deployment: pydemo-build
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/pydemo/pydemo-build@sha256:829b21b6206a41e79b6e6f33d3e525959f7717121bf3c8db9c1b5a24c53a5d40
        imagePullPolicy: Always
        name: pydemo-build
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
